新增/修改內容

--- a/scss/style.css
+++ b/scss/style.css
@@ -163,6 +163,10 @@ main {
   padding: 0 20px;
 }
 
+.banner:hover > div {
+  opacity: 1;
+}
+
 .banner div > img {
   width: 40px;
 }
@@ -253,12 +257,12 @@ main {
   right: 20px;
 }
 
-.banner:hover > div {
-  opacity: 1;
-}
-
 .mg_top10 {
   margin-top: 10px;
+}
+
+.mg_bottom10 {
+  margin-bottom: 10px;
 }
 
 ul.icon_check li {
@@ -271,6 +275,11 @@ ul.icon_x li {
   margin-left: 20px;
 }
 
+ul.disc li {
+  list-style: disc;
+  margin-left: 20px;
+}
+
 .content {
   border: 5px ridge;
   border-radius: 6px;
@@ -278,6 +287,17 @@ ul.icon_x li {
   margin: 100px auto 50px;
   padding-bottom: 20px;
   color: white;
+}
+
+.content a {
+  color: blue;
+  text-decoration: none;
+  -webkit-transition: color .2s;
+  transition: color .2s;
+}
+
+.content a:hover {
+  color: cyan;
 }
 
 .content .header {
@@ -296,17 +316,6 @@ ul.icon_x li {
 .content .header p {
   font-size: 20px;
   line-height: 1.5;
-}
-
-.content .header a {
-  color: blue;
-  text-decoration: none;
-  -webkit-transition: color .3s;
-  transition: color .3s;
-}
-
-.content .header a:hover {
-  color: cyan;
 }
 
 .content .header > img {
@@ -359,17 +368,6 @@ ul.icon_x li {
   border-radius: 8px;
 }
 
-.content > article a {
-  text-decoration: none;
-  color: blue;
-  -webkit-transition: color .2s;
-  transition: color .2s;
-}
-
-.content > article a:hover {
-  color: cyan;
-}
-
 .content > article:nth-of-type(even) div:nth-of-type(2) {
   -webkit-box-ordinal-group: 0;
       -ms-flex-order: -1;
@@ -391,17 +389,6 @@ ul.icon_x li {
 
 .content .code p {
   font-size: 20px;
-}
-
-.content .code p > a {
-  color: blue;
-  -webkit-transition: all .4s;
-  transition: all .4s;
-  text-decoration: none;
-}
-
-.content .code p > a:hover {
-  color: cyan;
 }
 
 .content .code .mark {
@@ -512,6 +499,16 @@ ul.icon_x li {
   color: cyan;
 }
 
+.end_text h3 {
+  font-size: 30px;
+  color: yellow;
+  margin: 10px 0;
+}
+
+.end_text video.radius {
+  border-radius: 8px;
+}
+
 footer {
   padding: 20px 0 40px 0;
   color: white;
@@ -536,6 +533,7 @@ footer > div a:hover {
 }
 
 footer .left {
+  display: block;
   position: absolute;
   left: 20px;
   top: 10px;
@@ -572,7 +570,7 @@ footer .right {
     opacity: 0;
   }
   .mob_menu {
-    position: absolute;
+    position: fixed;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -673,7 +671,7 @@ footer .right {
     left: -200%;
     bottom: 10px;
     display: block;
-    top: 75%;
+    top: 87.5%;
     -webkit-transition: left .3s;
     transition: left .3s;
   }
