--- a/test/style.css
+++ b/test/style.css
@@ -1,14 +1,25 @@
-div {
+.wrap {
+  width: 500px;
+  background-color: yellow;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.wrap:hover {
+  background-color: red;
+}
+
+.wrap > div {
+  width: 50%;
+  margin: 10px;
+  background-color: orange;
+}
+
+.wrap > div > p {
   font-size: 20px;
-  color: white;
-}
-
-div > span {
-  font-size: 40px;
-  color: white;
-}
-
-div > span:hover {
-  color: orange;
+  color: blue;
+  letter-spacing: 0.9px;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
