--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,6 +126,10 @@ main{
     position: relative;
     perspective: 500px;
     padding: 0 20px;
+
+    &:hover>div{
+        opacity: 1;
+    }
     div>img{
         width: 40px;
     }
@@ -138,9 +142,9 @@ main{
         transition: all .3s;
         cursor: pointer;
         opacity: 0;
-    }
-    >div:hover{
-        background-color: rgba(255,255,255,.5);
+        &:hover{
+            background-color: rgba(255,255,255,.5);
+        }
     }
     >a{
         display: flex;
@@ -180,13 +184,13 @@ main{
         right: 20px;
     }
 }
-.banner:hover>div{
-    opacity: 1;
-}
 
 // 全域
 .mg_top10{
     margin-top: 10px;
+}
+.mg_bottom10{
+    margin-bottom: 10px;
 }
 ul.icon_check li{
     list-style-image: url(../images/check.svg);
@@ -196,6 +200,10 @@ ul.icon_x li{
     list-style-image: url(../images/x-lg.svg);
     margin-left: 20px;
 }
+ul.disc li{
+    list-style: disc;
+    margin-left: 20px;
+}
 .content{
     border: 5px ridge;
     border-radius: 6px;
@@ -203,6 +211,14 @@ ul.icon_x li{
     margin: 100px auto 50px;
     padding-bottom: 20px;
     color: white;
+    a{
+        color: $hrefColor;
+        text-decoration: none;
+        transition: color .2s;
+        &:hover{
+            color: $hoverHrefColor;
+        }
+    }
     .header{
         text-align: center;
         max-width: 800px;
@@ -217,14 +233,6 @@ ul.icon_x li{
             font-size: 20px;
             line-height: 1.5;
         }
-        a{
-            color: $hrefColor;
-            text-decoration: none;
-            transition: color .3s;
-        }
-        a:hover{
-            color: $hoverHrefColor;
-        }
         >img{
             margin: 15px auto;
         }
@@ -237,8 +245,6 @@ ul.icon_x li{
         justify-content: center;
         align-items: center;
         font-size:$text;
-
-
         >div{
             width: 50%;
             box-sizing: border-box;
@@ -263,14 +269,6 @@ ul.icon_x li{
             // height: 400px;
             border-radius: 8px;
         }
-        a{
-            text-decoration: none;
-            color: $hrefColor;
-            transition: color .2s;
-        }
-        a:hover{
-            color: $hoverHrefColor;
-        }
     }
     >article:nth-of-type(even){
         div:nth-of-type(2){
@@ -291,14 +289,6 @@ ul.icon_x li{
         }
         p{
             font-size: $text;
-            >a{
-                color: $hrefColor;
-                transition: all .4s;
-                text-decoration: none;
-            }
-            >a:hover{
-                color: $hoverHrefColor;
-            }
         }
         .mark{
             color: chartreuse;
@@ -385,6 +375,14 @@ ul.icon_x li{
     a:hover{
         color: $hoverHrefColor;
     }
+    h3{
+        font-size: $text*1.5;
+        color: $titleColor;
+        margin: 10px 0;
+    }
+    video.radius{
+        border-radius: 8px;
+    }
 }
 
 footer{
@@ -405,6 +403,7 @@ footer{
         }
     }
     .left{
+        display: block;
         position: absolute;
         left: 20px;
         top: 10px;
@@ -442,7 +441,8 @@ footer{
         }
     }
     .mob_menu{
-        position: absolute;
+        position: fixed;
+        // position: absolute;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -523,7 +523,7 @@ footer{
             left: -200%;
             bottom: 10px;
             display: block;
-            top: 75%;
+            top: 87.5%;
             transition: left .3s;
         }
         .right{
