--- a/scss/style.scss
+++ b/scss/style.scss
@@ -322,6 +322,7 @@ ul.disc li{
     ol{
         list-style: decimal;
         font-size: $text;
+        padding: 10px 0;
         padding-left: 35px;
         >li{
             list-style: decimal;
@@ -377,27 +378,42 @@ ul.disc li{
     .video{
         width: 100%;
     }
-    // 問題如JQ
+    // JQ頁面
     .problem{
+        border-radius: 5px;
+        overflow: hidden;
         >.q{
+            padding:5px;
+            
             background-color: rgba(255, 74, 74,.6);
             &::before{
                 content: 'Q : ';
             }
         }
         >.a{
+            padding:5px;
+            
             background-color: rgba(201, 7, 7,.6);
             &::before{
                 content: 'A : ';
             }
         }
         >.a2{
+            padding:5px;
+            
             background-color: rgba(201, 7, 7,.6);
         }
         >pre{
+            padding:5px;
+            box-sizing: border-box;
             color: blue;
             background-color: rgba(255, 121, 80,.6);
         }
+    }
+    .effect_view{
+        background-color: rgba(255, 255, 0, 0.1);
+        margin: 5px 0;
+        padding: 5px;
     }
 }
 
@@ -406,6 +422,8 @@ ul.disc li{
 .end_text{
     text-align: center;
     margin-bottom: 30px;
+    max-width: 1000px;
+    margin: 10px auto;
     h2{
         color: $titleColor;
         font-size: $text*2;
