--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,8 @@
 
 $titleColor:rgb(255, 255, 0);
 $text:20px;
-$hrefColor:blue;
-$hoverHrefColor:cyan;
+$hrefColor:rgb(0, 0, 255);
+$hoverHrefColor:rgb(0, 255, 255);
 
 body{
     background: url(../images/bg.webp);
@@ -51,9 +51,11 @@ body.fixed_nav{
     }
     >li ul{
         position: absolute;
-        display: none;
         background: linear-gradient(50deg,rgb(240, 176, 0) , rgb(240, 204, 0));
         width: 200px;
+        height: 0px;
+        overflow: hidden;
+        transition: opacity .7s , height .7s;
         a{
             width: calc(100% - 50px);
             display: inline-block;
@@ -71,8 +73,10 @@ body.fixed_nav{
             font-size: $text;
         }
     }
+
     >li:hover ul{
-        display: block;
+        opacity: 1;
+        height: 420px;
     }
     // 預計只對menu5寫額外ul區域 但因Vue的for關係導致產生多個ul
     >li:not(.menu5)>ul{
@@ -595,6 +599,12 @@ footer{
             display: block;
             bottom: 60px;
             transition: left .3s;
+            svg{
+                color: rgb(255, 246, 221);
+                overflow: hidden;
+                background-color: rgb(150, 100, 0);
+                border-radius: 50%;
+            }
         }
         .right{
             right: 20px;
