--- a/scss/style.css
+++ b/scss/style.css
@@ -679,6 +679,7 @@ footer .right {
   .mob_menu a {
     text-decoration: none;
     color: cyan;
+    z-index: 200;
   }
   .mob_menu a:focus {
     color: blue;
@@ -686,8 +687,6 @@ footer .right {
   .mob_menu .menu5_more {
     width: 100%;
     height: 100vh;
-    top: 0;
-    left: -500%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -702,8 +701,19 @@ footer .right {
         -ms-flex-align: center;
             align-items: center;
     position: absolute;
-    -webkit-transition: all .3s;
-    transition: all .3s;
+    left: 0;
+    top: 0;
+    z-index: 100;
+  }
+  .mob_menu .menu5_more > li {
+    width: 100%;
+    text-align: center;
+  }
+  .mob_menu .menu5_more > li > a {
+    position: relative;
+    left: -300%;
+    -webkit-transition: left 0.6s cubic-bezier(0.9, 0.3, 0, 1.18), color 0.3s;
+    transition: left 0.6s cubic-bezier(0.9, 0.3, 0, 1.18), color 0.3s;
     z-index: 65535;
   }
   .code {
