--- a/scss/style.scss
+++ b/scss/style.scss
@@ -534,6 +534,7 @@ footer{
         a{
             text-decoration: none;
             color: $hoverHrefColor;
+            z-index: 200;
             &:focus{
                 color: $hrefColor;
             }
@@ -541,15 +542,25 @@ footer{
         .menu5_more{
             width: 100%;
             height: 100vh;
-            top: 0;
-            left: -500%;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
             position: absolute;
-            transition: all .3s;
-            z-index: 65535;
+            left: 0;
+            top: 0;
+            z-index: 100;
+            >li{
+                width: 100%;
+                text-align: center;
+                >a{
+                    position: relative;
+                    left: -300%;
+                    // https://cubic-bezier.com/
+                    transition: left .6s cubic-bezier(.9,.3,0,1.18) , color .3s ;
+                    z-index: 65535;
+                }
+            }
         }
     }
     .code{
