--- a/scss/style.css
+++ b/scss/style.css
@@ -272,6 +272,10 @@ main {
   margin-bottom: 10px;
 }
 
+.mg_right_left10 {
+  margin: 0 10px;
+}
+
 ul.icon_check li {
   list-style-image: url(../images/check.svg);
   margin-left: 20px;
@@ -279,6 +283,11 @@ ul.icon_check li {
 
 ul.icon_x li {
   list-style-image: url(../images/x-lg.svg);
+  margin-left: 20px;
+}
+
+ul.icon_qu li {
+  list-style-image: url(../images/question-lg.svg);
   margin-left: 20px;
 }
 
@@ -301,6 +310,46 @@ ul.disc li {
 
 .w400 {
   width: 400px;
+}
+
+table.explain {
+  width: 600px;
+  max-width: 100%;
+  margin: 10px auto;
+  text-align: center;
+  font-size: 20px;
+}
+
+table.explain th {
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  padding: 2px 0;
+}
+
+table.explain td {
+  border: 1px solid black;
+  padding: 3px 0;
+}
+
+.bg1 {
+  background: linear-gradient(45deg, #7e5df5, #8eb1ff);
+}
+
+.bg2 {
+  background: linear-gradient(45deg, #8eb1ff, #7e5df5);
+}
+
+i.mid {
+  vertical-align: middle;
+}
+
+i.arrow_right::before {
+  content: url(../images/arrow-right.svg);
+}
+
+.fz20 {
+  font-size: 20px;
 }
 
 .content {
@@ -439,6 +488,7 @@ ul.disc li {
 }
 
 .content .code ol pre {
+  padding: 5px 10px 5px 5px;
   white-space: pre-wrap !important;
   white-space: -moz-pre-wrap !important;
   word-wrap: break-word;
@@ -480,6 +530,13 @@ ul.disc li {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.content .code .flex.row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .content .code .flex_center {
@@ -550,7 +607,7 @@ ul.disc li {
   text-align: center;
   margin-bottom: 30px;
   max-width: 1000px;
-  margin: 10px auto;
+  margin: 10px auto 30px;
 }
 
 .end_text h2 {
