--- a/scss/style.css
+++ b/scss/style.css
@@ -139,7 +139,8 @@ main {
 }
 
 .breadcrumbs {
-  max-width: 1400px;
+  width: 1400px;
+  max-width: 80%;
   font-size: 19px;
   margin: 20px auto;
   color: greenyellow;
@@ -476,8 +477,8 @@ i.arrow_right::before {
 .content .code ol {
   list-style: decimal;
   font-size: 20px;
-  padding: 10px 0;
-  padding-left: 35px;
+  padding: 10px 10px 10px 30px;
+  border-radius: 3px;
 }
 
 .content .code ol > li {
@@ -800,6 +801,8 @@ footer .right {
     right: 5%;
   }
   .breadcrumbs {
+    margin: 20px 0;
+    line-height: 1.5;
     padding-left: 20px;
   }
   .content > header.header {
