--- a/scss/style.css
+++ b/scss/style.css
@@ -1,4 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: url(../images/bg.webp);
   background-size: 50px 100px;
