--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,9 @@ $text:20px;
 $hrefColor:rgb(0, 0, 255);
 $hoverHrefColor:rgb(0, 255, 255);
 
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: url(../images/bg.webp);
     background-size: 50px 100px;
